--- a/index.html
+++ b/index.html
@@ -10,8 +10,12 @@
 <script src="https://kit.fontawesome.com/2346a3d080.js" crossorigin="anonymous"></script>
     <title>Visit Toulouse</title>
 </head>
-<body>
-    <h1>La Ville en Rose</h1>
+<body><div class="container"><header>
+    <h1>Toulouse</h1><h2>la Ville Rose</h2>
+    <button>Learn More</button>
+
+
+</header>
     <footer class="mt-5"><div class="container"><div class="row justify-content-end align-items-center">
   <div class="col-md-6"><div class="p-2 m-3 align-center foot">This website was coded by<a href="https://github.com/lswitkowski/" target="_blank" class="plainlink"> Lisa W</a>, open-sourced on <a href="https://github.com/lswitkowski?tab=repositories" target="_blank" class="plainlink">GitHub</a>, and hosted on
  <a href="https://www.netlify.com/" target="_blank" title="netlify" class="plainlink">Netlify</a>.</div></div>
@@ -24,6 +28,6 @@
  
  <div class="col-md-2"><a href="mailto:lswitkowski@gmail.com"><i class="fa-regular fa-envelope"></i></a></div>
 </div>
-</div> </footer>
+</div> </footer></div>  
 </body>
 </html>
