--- a/index.html
+++ b/index.html
@@ -10,8 +10,11 @@
 <script src="https://kit.fontawesome.com/2346a3d080.js" crossorigin="anonymous"></script>
     <title>Visit Toulouse</title>
 </head>
-<body><div class="container"><header>
-    <h1>Toulouse</h1><h2>la Ville Rose</h2>
+<body>
+    <div class="container">
+        <header>
+    <h1>Toulouse</h1>
+    <h2>la Ville Rose</h2>
     <button>Learn More</button>
 
 
