--- a/index.html
+++ b/index.html
@@ -19,18 +19,31 @@
 
 
 </header>
-    <footer class="mt-5"><div class="container"><div class="row justify-content-end align-items-center">
-  <div class="col-md-6"><div class="p-2 m-3 align-center foot">This website was coded by<a href="https://github.com/lswitkowski/" target="_blank" class="plainlink"> Lisa W</a>, open-sourced on <a href="https://github.com/lswitkowski?tab=repositories" target="_blank" class="plainlink">GitHub</a>, and hosted on
- <a href="https://www.netlify.com/" target="_blank" title="netlify" class="plainlink">Netlify</a>.</div></div>
-  
-  
-  <div class="col-md-2">
- <a href="https://www.linkedin.com/in/lisa-w-5498bba/" target="_blank" title="linkedin"><i class="fa-brands fa-linkedin-in"></i></a></div>
-  
- <div class="col-md-2"><a href="https://www.instagram.com/lisa_witkowski/?hl=fr" target="_blank" title="instagram"><i class="fa-brands fa-instagram"></i></a></div> 
- 
- <div class="col-md-2"><a href="mailto:lswitkowski@gmail.com"><i class="fa-regular fa-envelope"></i></a></div>
+    <footer>
+        <div class="footer-grid"><div>
+<h3>More About Toulouse</h3>
+<ul>
+    <li><a href="https://www.toulouse-tourisme.com/">Toulouse Tourism</a></li>
+    <li><a href="https://www.sncf-connect.com/">SNCF - Travel by Train</a></li>
+    <li><a href="https://www.tripadvisor.fr/Attractions-g187175-Activities-Toulouse_Haute_Garonne_Occitanie.html">Things to Do in Toulouse</a></li>
+</ul>
 </div>
-</div> </footer></div>  
+
+<div>
+    <h3>About Me</h3>
+    <p>Hi! My name is Lisa and I love to travel in France. I created this page as part of a project for SheCodes Responsive to develop my coding skills.</p>
+</div>    
+
+<div>
+    <h3>About This Website</h3>
+    <p>This website was coded by<a href="https://github.com/lswitkowski/" target="_blank" class="plainlink"> Lisa W</a>, open-sourced on <a href="https://github.com/lswitkowski?tab=repositories" target="_blank">GitHub</a>, and hosted on
+ <a href="https://www.netlify.com/" target="_blank" title="netlify">Netlify</a>.</p>
+ <p><a href="https://www.linkedin.com/in/lisa-w-5498bba/" target="_blank" title="linkedin"><i class="fa-brands fa-linkedin-in"></i></a><br/><a href="https://www.instagram.com/lisa_witkowski/?hl=fr" target="_blank" title="instagram"><i class="fa-brands fa-instagram"></i></a><br/>
+<a href="mailto:lswitkowski@gmail.com"><i class="fa-regular fa-envelope"></i></a></p>
+  
+</div>
+
+</div>
+</footer></div>  
 </body>
 </html>
