--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 <div>
     <h3>About Me</h3>
     <p>Hi! My name is Lisa and I love to travel in France. I created this page as part of a project for SheCodes Responsive to develop my coding skills.</p>
- <p class="icons"><a href="https://www.linkedin.com/in/lisa-w-5498bba/" target="_blank" title="linkedin"> &nbsp<i class="fa-brands fa-linkedin-in"></i> &nbsp</a><a href="https://www.instagram.com/lisa_witkowski/?hl=fr" target="_blank" title="instagram"><i class="fa-brands fa-instagram"></i></a>
+ <p class="icons"><a href="https://www.linkedin.com/in/lisa-w-5498bba/" target="_blank" title="linkedin"><i class="fa-brands fa-linkedin-in"></i></a><a href="https://www.instagram.com/lisa_witkowski/?hl=fr" target="_blank" title="instagram"><i class="fa-brands fa-instagram"></i></a>
 <a href="mailto:lswitkowski@gmail.com"><i class="fa-regular fa-envelope"></i></a></p></div>    
 
 <div>
