--- a/index.html
+++ b/index.html
@@ -15,11 +15,21 @@
         <header>
     <h1>Toulouse</h1>
     <h2>la Ville Rose</h2>
-    <button>Learn More</button>
+    <p class="center"><a class="button" href="#why">Learn more</a></p></header>
+
+    
+<section class="why-toulouse">
+    <div><img src="/image/cheese.jpg" class="cheese img-fluid" width="100%"></div>
+    <div>
+        <a name="why"></a>
+    <h2 class="why-heading">The Heart of the South-West</h2>
+    <p class="why-paragraph">France's fourth-largest city sets itself apart in so many ways: architecture, history, gastronomy, museums, festivals, and artisan craftsmanship, to name just a few.
+ Largely left behind in the Industrial Revolution, Toulouse is now a leader in aeronautics and aerospace technologies. Its beautiful and lively streets
+are filled with cafés, well-populated with students. Toulousains stay up late, but mostly behave themselves.</p>
+</div><div><img src="/image/bar.jpg" class="bar img-fluid" width="100%"></div></section>
 
 
-</header>
-    <footer>
+<footer>
         <div class="footer-grid"><div>
 <h3>More About Toulouse</h3>
 <ul>
