--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <h2 class="why-heading">The Heart of the South-West</h2>
     <p class="why-paragraph">France's fourth-largest city sets itself apart in so many ways: architecture, history, gastronomy, museums, festivals, and artisan craftsmanship, to name just a few.
  Largely left behind in the Industrial Revolution, Toulouse is now a leader in aeronautics and aerospace technologies. Its beautiful and lively streets
-are filled with cafés, well-populated with students. Toulousains stay up late, but mostly behave themselves.</p>
+are filled with cafés, well-populated with students. Les Toulousains stay up late, but mostly behave themselves.</p>
 </div><div><img src="/image/bar.jpg" class="bar img-fluid" width="100%"></div></section>
 
 
