Add cards, images

--- a/index.html
+++ b/index.html
@@ -22,12 +22,59 @@
     <div><img src="/image/cheese.jpg" class="cheese img-fluid" width="100%"></div>
     <div>
         <a name="why"></a>
-    <h2 class="why-heading">The Heart of the South-West</h2>
+    <h2 class="why-heading">The Heart of France's Captivating South-West</h2>
     <p class="why-paragraph">France's fourth-largest city sets itself apart in so many ways: architecture, history, gastronomy, museums, festivals, and artisan craftsmanship, to name just a few.
  Largely left behind in the Industrial Revolution, Toulouse is now a leader in aeronautics and aerospace technologies. Its beautiful and lively streets
-are filled with cafés, well-populated with students. Les Toulousains stay up late, but mostly behave themselves.</p>
+are filled with cafés, well-populated with students. Les Toulousains stay up fairly late, but mostly behave themselves.</p>
 </div><div><img src="/image/bar.jpg" class="bar img-fluid" width="100%"></div></section>
 
+
+<section class="my-favorite">
+    <h3 class="favorite-header">Not-To-Miss on Your Visit:</h3>
+<div class="cards">
+    <div class="card"><div class="card-pics">
+        <div><img src="/image/vh1.jpg" class="img-fluid" width=100%/></div>
+    </div>
+    <div class="card-text"><h4>Marché Victor Hugo</h4>
+    <h5>Address: Pl. Victor Hugo, 31000 Toulouse, France</h5><h5 class="bottom-margin">What I like about it:</h5><p>Everything! This is an extraordinary place to see (and taste) the decadent culinary bounty of south-western France. There's plenty to taste here, and many of the surrounding restaurants take full advantage of the market, but I highly recommend that you stay someplace with a kitchen- it's just too much fun to make dinner from your market finds.</p><div class="card-footer">
+                <a
+                  href="https://goo.gl/maps/15LZ4DUTtJWjDLMQ8"
+                  class="btn"
+                  target="_blank"
+                >
+                  Learn more
+                </a>
+              </div></div></div>
+    <div class="card"><div class="card-pics">
+        <div><img src="/image/degustation1.jpg" class="img-fluid" width=100%/></div>
+    </div>
+    <div class="card-text"><h4>Les petits crus</h4>
+    <h5>Address: 17 Rue des Couteliers, 31000 Toulouse, France</h5><h5 class="bottom-margin">What I like about it:</h5><p>For a light dinner or an unforgettable apero, le petits crus is more than just its inventive presentation. Check out their exceptional and creative wine and cheese pairings, all very thoughtfully presented and explained in detail.</p><br/> <div class="card-footer">
+                <a
+                  href="https://goo.gl/maps/15LZ4DUTtJWjDLMQ8"
+                  class="btn"
+                  target="_blank"
+                >
+                  Learn more
+                </a>
+              </div></div></div>
+    <div class="card"><div class="card-pics">
+        <div><img src="/image/castle.jpg" class="img-fluid" width=100%/></div>
+    </div>
+    <div class="card-text"><h4>Carcassonne Castle</h4>
+    <h5>Address:  1 Rue Viollet le Duc, 11000 Carcassonne, France.</h5><h5 class="bottom-margin">What I like about it:</h5><p>This truly remarkable fortified medieval city is a short trip from Toulouse, and the castle is well-worth seeing in person. Climb the (rather challenging) hills, check out the numerous museums, and take a boat ride along the Canal du Midi. But whatever you do, don't miss the cassoulet! </p><br/> <div class="card-footer">
+                <a
+                  href="https://goo.gl/maps/15LZ4DUTtJWjDLMQ8"
+                  class="btn"
+                  target="_blank"
+                >
+                  Learn more
+                </a>
+              </div></div></div>
+    
+</div>
+
+</section>
 
 <footer>
         <div class="footer-grid"><div>
