--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@ are filled with cafés, well-populated with students. Les Toulousains stay up fa
                   class="btn"
                   target="_blank"
                 >
-                  Learn more
+                  Go there!
                 </a>
               </div></div></div>
     <div class="card"><div class="card-pics">
@@ -55,7 +55,7 @@ are filled with cafés, well-populated with students. Les Toulousains stay up fa
                   class="btn"
                   target="_blank"
                 >
-                  Learn more
+                  Go there!
                 </a>
               </div></div></div>
     <div class="card"><div class="card-pics">
@@ -68,7 +68,7 @@ are filled with cafés, well-populated with students. Les Toulousains stay up fa
                   class="btn"
                   target="_blank"
                 >
-                  Learn more
+                  Go there!
                 </a>
               </div></div></div>
     
