--- a/index.html
+++ b/index.html
@@ -19,21 +19,21 @@
 
     
 <section class="why-toulouse">
-    <div><img src="/image/cheese.jpg" class="cheese img-fluid" width="100%"></div>
+    <div><img src="/image/cheese.jpg" class="cheese img-fluid" width="100%" alt="cheese"></div>
     <div>
         <a name="why" class="why"></a>
     <h2 class="why-heading">The Heart of France's Captivating South-West</h2>
     <p class="why-paragraph">France's fourth-largest city sets itself apart in so many ways: architecture, history, gastronomy, museums, festivals, and artisan craftsmanship, to name just a few.
  Largely left behind in the Industrial Revolution, Toulouse is now a leader in aeronautics and aerospace technologies. Its beautiful and lively streets
 are filled with cafés, well-populated with students. Les Toulousains stay up fairly late, but mostly behave themselves.</p>
-</div><div><img src="/image/bar.jpg" class="bar img-fluid" width="100%"></div></section>
+</div><div><img src="/image/bar.jpg" class="bar img-fluid" width="100%" alt="bar à vin"></div></section>
 
 
 <section class="my-favorite">
     <h3 class="favorite-header">Not-To-Miss on Your Visit:</h3>
 <div class="cards">
     <div class="card"><div class="card-pics">
-        <div><img src="/image/vh1.jpg" class="img-fluid" width=100%/></div><div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.9841773891335!2d1.4438494764211232!3d43.606871055425636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aea54a2eaa3f27%3A0xc3a8323592eafa22!2sMarch%C3%A9%20Victor-Hugo!5e0!3m2!1sfr!2sus!4v1729917430616!5m2!1sfr!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        <div><img src="/image/vh1.jpg" class="img-fluid" width=100% alt="counter at market"/></div><div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2888.9841773891335!2d1.4438494764211232!3d43.606871055425636!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aea54a2eaa3f27%3A0xc3a8323592eafa22!2sMarch%C3%A9%20Victor-Hugo!5e0!3m2!1sfr!2sus!4v1729917430616!5m2!1sfr!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
     <div class="card-text"><h4>Marché Victor Hugo</h4>
     <h5>Address: Pl. Victor Hugo, 31000 Toulouse, France</h5><h5 class="bottom-margin">What I like about it:</h5><p>Everything! This is an extraordinary place to see (and taste) the decadent culinary bounty of south-western France. There's plenty to taste here, and many of the surrounding restaurants take full advantage of the market, but I highly recommend that you stay someplace with a kitchen- it's just too much fun to make dinner from your market finds.</p><div class="card-footer">
@@ -46,7 +46,7 @@ are filled with cafés, well-populated with students. Les Toulousains stay up fa
                 </a>
               </div></div></div>
     <div class="card"><div class="card-pics">
-        <div><img src="/image/degustation1.jpg" class="img-fluid" width=100%/></div><div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2889.3952890343253!2d1.4391845119916928!3d43.598310555858376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebbaaa7d25b9f%3A0xd8d86558d065bbf5!2sLes%20Petits%20Crus!5e0!3m2!1sfr!2sus!4v1729918269285!5m2!1sfr!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        <div><img src="/image/degustation1.jpg" class="img-fluid" width=100% alt="cheese plate"/></div><div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2889.3952890343253!2d1.4391845119916928!3d43.598310555858376!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12aebbaaa7d25b9f%3A0xd8d86558d065bbf5!2sLes%20Petits%20Crus!5e0!3m2!1sfr!2sus!4v1729918269285!5m2!1sfr!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
     <div class="card-text"><h4>Les petits crus</h4>
     <h5>Address: 17 Rue des Couteliers, 31000 Toulouse, France</h5><h5 class="bottom-margin">What I like about it:</h5><p>For a light dinner or an unforgettable apero, le petits crus is more than just its inventive presentation. Check out their exceptional and creative wine and cheese pairings, all very thoughtfully presented and explained in detail.</p><br/> <div class="card-footer">
@@ -59,7 +59,7 @@ are filled with cafés, well-populated with students. Les Toulousains stay up fa
                 </a>
               </div></div></div>
     <div class="card"><div class="card-pics">
-        <div><img src="/image/castle.jpg" class="img-fluid" width=100%/></div><div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46529.254893191624!2d2.3078900678030765!3d43.20784426917302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ae2c6ae7af34b7%3A0x52e5b6d2cb68c874!2sCit%C3%A9%20de%20Carcassonne!5e0!3m2!1sfr!2sus!4v1729917624337!5m2!1sfr!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
+        <div><img src="/image/castle.jpg" class="img-fluid" width=100% alt="castle"/></div><div><iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d46529.254893191624!2d2.3078900678030765!3d43.20784426917302!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12ae2c6ae7af34b7%3A0x52e5b6d2cb68c874!2sCit%C3%A9%20de%20Carcassonne!5e0!3m2!1sfr!2sus!4v1729917624337!5m2!1sfr!2sus" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe></div>
     </div>
     <div class="card-text"><h4>Cité de Carcassonne</h4>
     <h5>Address:  1 Rue Viollet le Duc, 11000 Carcassonne, France.</h5><h5 class="bottom-margin">What I like about it:</h5><p>This truly remarkable fortified medieval city is a short trip from Toulouse, and the castle is well-worth seeing in person. Climb the (rather challenging) hills, check out the numerous museums, and take a boat ride along the Canal du Midi. But whatever you do, don't miss the cassoulet! </p><br/> <div class="card-footer">
